<resources>
    <string name="app_name">AppOrgArtistas</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="coordenadas">Lat: %1$s | Lng: %2$s</string>
    <string name="tomar_foto">Capturar Página</string>
    <string name="ingresar_titulo">Ingresá un título</string>
    <string name="subir_pdf">Subir PDF</string>
    <string name="crear_setlist">Crear Setlist</string>
    <string name="pages_in_queue">Páginas en cola: %1$d</string>
    <string name="logo_app">Logo App</string>
    <string name="org_artistas">OrgArtistas</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="login_subtitle">Iniciá sesión para continuar</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="no_account">¿No tenés cuenta? Registrate</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="new_partitura">Nueva Partitura</string>
    <string name="default_create_foto_partitura">Foto Partitura</string>
    <string name="default_create_pdf_capturado">PDF_CAPTURADO</string>
    <string name="message_create_archivos_listos_para_subir">%1$d archivos listos para subir</string>
    <string name="message_create_setlist_creado_con_xito">¡Setlist creado con éxito!</string>
    <string name="message_create_hubo_un_error_al_guardar">Hubo un error al guardar.</string>
    <string name="message_create_no_se_pudo_obtener_ubicaci_n">No se pudo obtener ubicación</string>
    <string name="default_create_usuario_anonimo">usuario_anonimo</string>
    <string name="message_create_ingresa_un_titulo">Ingresá un título</string>
    <string name="message_create_ingresa_el_nombre_del_grupo">Ingresá el nombre del grupo</string>
    <string name="message_create_ingresa_una_ubicacion">Ingresá una ubicación</string>
    <string name="message_create_subi_al_menos_un_pdf_o_foto">Subí al menos un PDF o foto</string>
    <string name="message_create_subiendo_archivos_por_favor_espera">Subiendo archivos, por favor esperá...</string>
    <string name="default_create_nombre_de_la_partitura">Nombre de la Partitura</string>
    <string name="message_create_verifica_o_edita_el_nombre_de_la_partitura">Verificá o editá el nombre de la partitura:</string>
    <string name="btn_create_agregar">Agregar</string>
    <string name="message_create_agregada">Agregada: %1$s</string>
    <string name="btn_create_cancelar">Cancelar</string>
    <string name="default_pdfviewer_pdf_url">PDF_URL</string>
    <string name="default_pdfviewer_obra_titulo">OBRA_TITULO</string>
    <string name="default_pdf_partitura">Partitura</string>
    <string name="message_register_completa_todos_los_campos">Completá todos los campos</string>
    <string name="message_register_las_contrasenias_no_coinciden">Las contraseñas no coinciden</string>
    <string name="message_register_la_contrasenia_debe_tener_al_menos_6_caracteres">La contraseña debe tener al menos 6 caracteres</string>
    <string name="message_register_cuenta_creada_exitosamente">¡Cuenta creada exitosamente!</string>
    <string name="hint_dashboard_ej_a7x9bq">Ej: A7X9BQ</string>
    <string name="alerttitle_dashboard_unirse_a_un_setlist">Unirse a un Setlist</string>
    <string name="message_dashboard_ingresa_el_codigo_de_6_caracteres_que_te_compartio_el_director">Ingresá el código de 6 caracteres que te compartió el director:</string>
    <string name="btn_dashboard_unirse">Unirse</string>
    <string name="message_dashboard_el_codigo_debe_tener_exactamente_6_caracteres">El código debe tener exactamente 6 caracteres</string>
    <string name="btn_dashboard_cancelar">Cancelar</string>
    <string name="title_dashboard_1_seleccionado">1 seleccionado</string>
    <string name="title_dashboard_mis_setlists">Mis Setlists</string>
    <string name="message_dashboard_te_uniste_al_setlist_con_xito">¡Te uniste al setlist con éxito!</string>
    <string name="title_dashboard_borrar_setlist">Borrar Setlist</string>
    <string name="message_dashboard_estas_seguro_de_que_queres_borrar">¿Estás seguro de que querés borrar \'%1$s\'?</string>
    <string name="btn_dashboard_borrar">Borrar</string>
    <string name="default_detail_foto_partitura">Foto Partitura</string>
    <string name="message_detail_error_al_cargar_setlist">Error al cargar Setlist</string>
    <string name="message_detail_setlist_actualizado">Setlist actualizado</string>
    <string name="message_detail_no_tenes_partituras_en_la_nube">No tenés partituras en la nube.</string>
    <string name="title_detail_tu_repertorio_en_la_nube">Tu Repertorio en la Nube</string>
    <string name="message_detail_vinculando">Vinculando...</string>
    <string name="btn_detail_cancelar">Cancelar</string>
    <string name="default_detail_seleccionados">%1$d seleccionados</string>
    <string name="default_detail_partitura_sin_nombre">Partitura sin nombre</string>
    <string name="option_detail_subir_pdf_desde_el_celular">Subir PDF desde el celular</string>
    <string name="option_detail_tomar_foto_con_la_camara">Tomar foto con la cámara</string>
    <string name="default_detail_elegir_partitura_de_la_nube">Elegir partitura de la nube</string>
    <string name="title_detail_agregar_partitura">Agregar Partitura</string>
    <string name="message_detail_buscando">Buscando...</string>
    <string name="title_detail_nombre_de_la_partitura">Nombre de la Partitura</string>
    <string name="btn_detail_subir">Subir</string>
    <string name="message_detail_subiendo">Subiendo...</string>
    <string name="activityCamera_capturar_partitura">Capturar Partitura</string>
    <string name="activity_camera_toma_una_foto_para_convertirla_en_pdf">Tomá una foto para convertirla en PDF</string>
    <string name="activity_camera_tomar_foto">Tomar Foto</string>
    <string name="btn_activity_camera_guardar">Guardar</string>
    <string name="title_activity_create_nuevo_setlist">Nuevo Setlist</string>
    <string name="subtitle_activity_create_carga_tus_partituras_y_datos_del_evento">Cargá tus partituras y datos del evento</string>
    <string name="subtitle_activity_create_organiza_tus_canciones">Organizá tus canciones y material para el show</string>
    <string name="title_create_informacion">Información</string>
    <string name="title_create_material">Material</string>
    <string name="title_create_ubicacion">Ubicación</string>
    <string name="text_create_ubicacion_del_evento">Ubicación del evento</string>
    <string name="btn_activity_create_obtener_ubicacion_actual">Obtener ubicación actual</string>
    <string name="btn_create_usar_ubicacion_actual">Usar ubicación actual</string>
    <string name="btn_activity_createsubir_pdf">Subir PDF</string>
    <string name="btn_activity_create_tomar_foto">Tomar Foto</string>
    <string name="btn_activity_create_ningun_archivo_seleccionado">Ningún archivo seleccionado</string>
    <string name="btn_activity_create_crear_setlist">Crear Setlist</string>
    <string name="btn_create_agregar_pdf">Agregar PDF</string>
    <string name="btn_create_sacar_foto">Sacar foto</string>
    <string name="empty_create_materiales">Todavía no agregaste canciones</string>
    <string name="default_create_coordenadas">Latitud y longitud sin cargar</string>
    <string name="title_login_bienvenido_a">Bienvenido/a</string>
    <string name="title_login_inicia_sesion_para_continuar">Iniciá sesión para continuar</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_contrasenia">Contraseña</string>
    <string name="btn_login_iniciar_sesion">Iniciar sesión</string>
    <string name="btn_register_volver">Volver</string>
    <string name="tv_register_crear_cuenta">Crear cuenta</string>
    <string name="tv_register_completa_los_datos_para_registrarte">Completá los datos para registrarte</string>
    <string name="hint_register_nombre">Nombre</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_contrasenia">Contraseña</string>
    <string name="et_register_confirmar_contrasenia">Confirmar contraseña</string>
    <string name="btn_register_registrarme">Registrarme</string>
    <string name="tv_dashboard_mis_setlists">Mis Setlists</string>
    <string name="drawer_section_shows">SHOWS</string>
    <string name="drawer_item_shows">Shows</string>
    <string name="drawer_item_setlists">Mis Setlists</string>
    <string name="drawer_section_director">DIRECTOR</string>
    <string name="drawer_item_logout">Cerrar sesión</string>
    <string name="nav_dashboard_director">Director</string>
    <string name="nav_dashboard_shows">Shows</string>
</resources>