<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityCamera_capturar_partitura"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#222222" />

    <!-- Subtitulo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/activity_camera_toma_una_foto_para_convertirla_en_pdf"
        android:textSize="14sp"
        android:textColor="#777777" />

    <!-- Vista previa -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPreviewFotos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp"
        android:clipToPadding="false" />

    <!-- Botón foto -->
    <Button
        android:id="@+id/btnCapturar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#6B4EFF"
        android:text="@string/activity_camera_tomar_foto"
        android:textColor="#FFFFFF" />

    <!-- Botón usar -->
    <Button
        android:id="@+id/btnSubir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_activity_camera_guardar"
        android:textColor="#FFFFFF" />

</LinearLayout>